feat(submodules): add olc pixel game engine
Signed-off-by: Akshit Garg <garg.akshit@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,24 @@
-# only for cmake --version >= 3.5.1
+# Only for cmake --version >= 3.5.1
 cmake_minimum_required(VERSION 3.5.1)
 
-# project name
+# Project name
 project(chip-8)
 
-# creates the variable EXEC and sets it to hello
+# Creates the variable EXEC and sets it to hello
 set(EXEC hello)
 
 # set the C++14 standard
 set(CMAKE_CXX_STANDARD 17)
 
+# Set the submodule directory
+SET(SUBMODULE_DIR submodules)
+
 # I../includes
 include_directories(includes)
+include_directories(${SUBMODULE_DIR}/olcPixelGameEngine)
 
-# puts all .cpp files inside src to the SOURCES variable
+# Puts all .cpp files inside src to the SOURCES variable
 file(GLOB SOURCES src/*.cpp)
 
-# compiles the files defined by SOURCES to generante the executable defined by EXEC
+# Compiles the files defined by SOURCES to generante the executable defined by EXEC
 add_executable(${EXEC} ${SOURCES})
