feat(chip8): start implementing the CPU
- Implement file loading
- Implement CPU reset
- Implement enough opcodes to load IBM_Logo.ch8
- Refactor hello.cpp to be main.cpp
- Rename the executable from "hello" to "chip8" in `CMakeLists.txt`

Signed-off-by: Akshit Garg <garg.akshit@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.5.1)
 project(chip-8)
 
 # Creates the variable EXEC and sets it to hello
-set(EXEC hello)
+set(EXEC chip8)
 
 # set the C++14 standard
 set(CMAKE_CXX_STANDARD 17)
