--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "submodules/olcPixelGameEngine"]
 	path = submodules/olcPixelGameEngine
 	url = https://github.com/OneLoneCoder/olcPixelGameEngine
+[submodule "submodules/glfw"]
+	path = submodules/glfw
+	url = https://github.com/glfw/glfw
+[submodule "submodules/imgui"]
+	path = submodules/imgui
+	url = https://github.com/ocornut/imgui
