refactor: use imgui's memory editor instead of custom window
This significantly reduces CPU usage as imgui's memory editor uses
virtual scrolling to only read and format the bytes visible in the
window. Old custom window read and formatted all bytes resulting in a
not so neglibible overhead

Signed-off-by: Akshit Garg <garg.akshit@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ include_directories(${SUBMODULE_DIR}/olcPixelGameEngine)
 include_directories(${SUBMODULE_DIR}/glfw/include)
 include_directories(${SUBMODULE_DIR}/imgui)
 include_directories(${SUBMODULE_DIR}/imgui/backends)
+include_directories(${SUBMODULE_DIR}/imgui_club)
 
 # Remove OpenGL deprecation warning
 add_compile_definitions(GL_SILENCE_DEPRECATION)
