--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules/imgui"]
 	path = submodules/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "submodules/imgui_club"]
+	path = submodules/imgui_club
+	url = https://github.com/ocornut/imgui_club
